# Angry-agent

./: .gitignore  AGENTS.md  Makefile  README.md
agent-be-container/: Dockerfile  README.md  app.py  config.yaml  default_config.yaml  inspect_checkpoint.py  inspect_full_state.py  inspect_state.py  list_threads.py  pyproject.toml  requirements.txt  run_postgres.sh  test_pool.py  yoyo.ini
agent-be-container/migrations/: 001_initial_schema.rollback.sql  001_initial_schema.sql  002_thread_access.rollback.sql  002_thread_access.sql  003_users_table.rollback.sql  003_users_table.sql  004_add_visualizations_to_threads.rollback.sql  004_add_visualizations_to_threads.sql  004_enable_pgvector.rollback.sql  004_enable_pgvector.sql  004_visualizations.rollback.sql  004_visualizations.sql  005_agent_definitions.rollback.sql  005_agent_definitions.sql  006_visualizations_name.sql  007_visualizations_pin_to_pane.sql  008_learning_mode.rollback.sql  008_learning_mode.sql  009_remove_learning_mode_from_threads.rollback.sql  009_remove_learning_mode_from_threads.sql
agent-be-container/secrets/: google_api_key
agent-be-container/spec/: prd.md
agent-be-container/src/: __init__.py  agent.py  cli.py  database.py  main.py
agent-be-container/src/agent/: __init__.py  agent_store.py  embeddings.py  (+3 more)
agent-be-container/tests/: config.example.yaml  conftest.py  test_agent.py  test_agent_store_tool.py  test_agent_tools_generate.py  test_agent_tools_mfe.py  test_config.py  test_database.py  test_hams.py  test_learning_mode.py  test_mcp_client.py  test_mermaid.py  test_visualize_graph_tool.py
(+114 files in other folders)
