[tool.poetry]
name = "agent-be"
version = "0.1.0"
description = "AI Agent Backend with LangGraph"
authors = ["Ben Greene <ben@polecatworks.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^1.0"
langgraph-checkpoint-postgres = "^3.0"
aiohttp = "^3.13"
asyncpg = "^0.31"
pydantic = "^2.12"
langchain-core = "^1.2"
click = "^8.1.7"
pydantic-settings = "^2.12"
prometheus-async = "^25.1.0"
ruamel-yaml = "^0.19.1"
langchain-mcp-adapters = "^0.2.1"
langchain-google-genai = "^4.2.1"
langchain-openai = "^1.1.10"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^1.3"
aiohttp-devtools = "^1.1"
